- fixed jet suit randomly crashing (#239)
- fixed broken netherite space suit texture (#247)