@@ -1,0 +1,50 @@
+package earth.terrarium.ad_astra.mixin;
+
+import earth.terrarium.ad_astra.common.util.ModUtils;
+import earth.terrarium.ad_astra.common.util.OxygenUtils;
+import net.minecraft.core.BlockPos;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.InteractionResultHolder;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.BucketItem;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.ClipContext;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.material.Fluid;
+import net.minecraft.world.level.material.Fluids;
+import net.minecraft.world.phys.BlockHitResult;
+import org.spongepowered.asm.mixin.Final;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Shadow;
+import org.spongepowered.asm.mixin.injection.At;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
+
+@Mixin(BucketItem.class)
+public abstract class BucketItemMixin extends Item {
+
+    @Shadow
+    @Final
+    private Fluid content;
+
+    public BucketItemMixin(Properties properties) {
+        super(properties);
+    }
+
+    @Inject(method = "use", at = @At("HEAD"), cancellable = true)
+    private void ad_astra$use(Level level, Player player, InteractionHand usedHand, CallbackInfoReturnable<InteractionResultHolder<ItemStack>> cir) {
+        if (ModUtils.getWorldTemperature(level) < 0) {
+            BlockHitResult blockhitresult = getPlayerPOVHitResult(level, player, this.content == Fluids.EMPTY ? ClipContext.Fluid.SOURCE_ONLY : ClipContext.Fluid.NONE);
+            BlockPos pos = blockhitresult.getBlockPos();
+            if (!OxygenUtils.posHasOxygen(level, pos) && !OxygenUtils.posHasOxygen(level, pos.above())) {
+                BlockState blockState = level.getBlockState(pos);
+                if (blockState.hasProperty(BlockStateProperties.WATERLOGGED)) {
+                    cir.setReturnValue(InteractionResultHolder.fail(player.getItemInHand(usedHand)));
+                }
+            }
+        }
+    }
+}
