@@ -3,6 +3,7 @@ package earth.terrarium.ad_astra.mixin;
 import earth.terrarium.ad_astra.common.util.ModUtils;
 import earth.terrarium.ad_astra.common.util.OxygenUtils;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.Level;
@@ -20,6 +21,9 @@ public abstract class LiquidBlockMixin {
     @Inject(method = "onPlace", at = @At("TAIL"))
     private void ad_astra$onPlace(BlockState state, Level level, BlockPos pos, BlockState oldState, boolean isMoving, CallbackInfo ci) {
         if (ModUtils.getWorldTemperature(level) < 0 && !OxygenUtils.posHasOxygen(level, pos)) {
+            for (var dir : Direction.values()) {
+                if (OxygenUtils.posHasOxygen(level, pos.relative(dir))) return;
+            }
             level.setBlockAndUpdate(pos, Blocks.ICE.defaultBlockState());
         }
     }
