@@ -1,2 +1,2 @@
-// 1.19.2	2023-03-10T12:32:38.14614	Languages: en_us
-2b37abfb8a349fc3632bcd4040c0b35f57efd9ce assets/ad_astra/lang/en_us.json
+// 1.19.2	2023-03-18T19:15:50.340982	Languages: en_us
+36aa08635bc15f735281a42d0ca923ec906ab343 assets/ad_astra/lang/en_us.json
