@@ -391,8 +391,7 @@
   "gauge.ad_astra.fuel": "Fuel",
   "gauge.ad_astra.oxygen": "Oxygen",
   "gauge_text.ad_astra.blocked_warning[0]": "§4No Oxygen is Being Generated!",
-  "gauge_text.ad_astra.blocked_warning[1]": "Ensure that there is no block above the distributor",
-  "gauge_text.ad_astra.blocked_warning[2]": "and enough oxygen and power is being supplied.",
+  "gauge_text.ad_astra.blocked_warning[1]": "Ensure that enough oxygen and power is being supplied.",
   "gauge_text.ad_astra.energy_per_tick": "%s ⚡ / tick",
   "gauge_text.ad_astra.fluid_per_tick": "%s 🪣 / sec",
   "gauge_text.ad_astra.liquid_storage": "%s 🪣 / %d 🪣",
@@ -403,6 +402,9 @@
   "gauge_text.ad_astra.oxygen_leak_warning[2]": "the structure is too large for this distributor",
   "gauge_text.ad_astra.oxygen_leak_warning[3]": "to handle. Ensure that the entire structure is",
   "gauge_text.ad_astra.oxygen_leak_warning[4]": "completely sealed.",
+  "gauge_text.ad_astra.oxygen_leak_warning[5]": "",
+  "gauge_text.ad_astra.oxygen_leak_warning[6]": "If you've got multiple distributors set up in",
+  "gauge_text.ad_astra.oxygen_leak_warning[7]": "a large structure, you can ignore this warning.",
   "gauge_text.ad_astra.storage": "§eEnergy: %s ⚡ / %d ⚡",
   "gui.ad_astra.text.back": "Back",
   "gui.ad_astra.text.catalog": "CATALOG",
