@@ -21,5 +21,5 @@ rei_version=9.1.591
 emi_version=0.6.6
 
 resourcefullib_version=1.1.23
-resourcefulconfig_version=1.0.19
+resourcefulconfig_version=1.0.20
 botarium_version=1.8.2
